Correção em arquivos de validação, criação de documentação da api para rota 'Types' e refatoração das classes 'Type'
